[package]
name = "alert-after"
version = "1.0.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
license = "MIT/Apache-2.0"
description = "Get a desktop notification after a command finishes executing"
repository = "https://github.com/frewsxcv/alert-after"

[[bin]]
name = "aa"
path = "main.rs"

[dependencies]
notify-rust = "3.3"
mac-notification-sys = "0.1.0"
