[package]
name = "alert-after"
version = "1.5.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
license = "MIT/Apache-2.0"
description = "Get a desktop notification after a command finishes executing"
repository = "https://github.com/frewsxcv/alert-after"

[[bin]]
name = "aa"
path = "main.rs"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "3.3"

[target.'cfg(windows)'.dependencies]
winrt = {version = "0.3.0", features = ["windows-data", "windows-ui"]}
